tests/shouldFail/xWrongVarArg2.c
#include <stdio.h>

int main(void){
	printf("%lld\n", (int)(7));
	return 0;
}
